# csublineola-genome-virulence

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
colletotrichum_sublineola_pipeline/: __init__.py  alignment_processing.py  common.py  excel_reporting.py  extended_analysis.py  manuscript_outputs.py  run.py  statistics_tools.py  summary_outputs.py  virulence_processing.py
csublineola_marker_virulence/: __init__.py  analysis.py  cli.py  io.py  reporting.py
data/: README.md
examples/: example_commands.md
