[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csublineola-marker-virulence"
version = "1.0.1"
description = "Reproducible analysis of RAD-seq-derived marker profiles and differential-host virulence phenotypes in Colletotrichum sublineola."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "biopython>=1.83",
]

[project.scripts]
csublineola-marker-virulence = "csublineola_marker_virulence.cli:main"

[tool.setuptools]
packages = ["csublineola_marker_virulence"]
